--- a/index.html
+++ b/index.html
@@ -172,20 +172,20 @@
                             </div>
                             <div id="collapse-3" class="collapse d-md-none" aria-labelledby="heading-3" data-parent="#accordionExample">
                                 <ul>
-                                    <li><a href='#'>Закрытые системы</a></li>
-                                    <li><a href='#'>Открытые системы</a></li>
-                                    <li><a href='#'>Рулонные шторы день-ночь, Зебра</a></li>
-                                    <li><a href='#'>Система день-ночь, Зебра 3D</a></li>
-                                    <li><a href='#'>Каталог тканей</a></li>
+                                    <li><a href='rulon-shtory_vid.html'>Закрытые системы</a></li>
+                                    <li><a href='rulon-shtory_vid.html'>Открытые системы</a></li>
+                                    <li><a href='rulon-shtory_vid.html'>Рулонные шторы день-ночь, Зебра</a></li>
+                                    <li><a href='rulon-shtory_vid.html'>Система день-ночь, Зебра 3D</a></li>
+                                    <li><a href='rulon-shtory_vid.html'>Каталог тканей</a></li>
                                 </ul>
                             </div>
                             <a href='rulon-shtory.html' class="d-none d-md-block">Рулонные шторы</a>
                             <ul class="d-none d-md-block">
-                                <li><a href='#'>Закрытые системы</a></li>
-                                <li><a href='#'>Открытые системы</a></li>
-                                <li><a href='#'>Рулонные шторы день-ночь, Зебра</a></li>
-                                <li><a href='#'>Система день-ночь, Зебра 3D</a></li>
-                                <li><a href='#'>Каталог тканей</a></li>
+                                <li><a href='rulon-shtory_vid.html'>Закрытые системы</a></li>
+                                <li><a href='rulon-shtory_vid.html'>Открытые системы</a></li>
+                                <li><a href='rulon-shtory_vid.html'>Рулонные шторы день-ночь, Зебра</a></li>
+                                <li><a href='rulon-shtory_vid.html'>Система день-ночь, Зебра 3D</a></li>
+                                <li><a href='rulon-shtory_vid.html'>Каталог тканей</a></li>
                             </ul>
                         </li>
                         <li class="has-sub">
@@ -197,7 +197,7 @@
                                     <li><a href='rim-shtory_modeli.html'>Модели Римских штор</a></li>
                                     <li><a href='rim-shtory_decor.html'>Варианты декора</a></li>
                                     <li><a href='vertikal-zhaluzi_tkani.html'>Каталог тканей</a></li>
-                                    <li><a href='rim-shtory_decor.html'>Шторы с нанесением</a></li>
+                                    <li><a href='rim-shtory_nanesenie.html'>Шторы с нанесением</a></li>
                                 </ul>
                             </div>
                             <a href='rim-shtory.html' class="d-none d-md-block">Римские шторы</a>
@@ -205,7 +205,7 @@
                                 <li><a href='rim-shtory_modeli.html'>Модели Римских штор</a></li>
                                 <li><a href='rim-shtory_decor.html'>Варианты декора</a></li>
                                 <li><a href='vertikal-zhaluzi_tkani.html'>Каталог тканей</a></li>
-                                <li><a href='rim-shtory_decor.html'>Шторы с нанесением</a></li>
+                                <li><a href='rim-shtory_nanesenie.html'>Шторы с нанесением</a></li>
                             </ul>
                         </li>
                         <li><a href='#'>Японские шторы</a></li>
@@ -266,7 +266,7 @@
                 <li class="d-none d-md-inline-block"><a href='portfolio.html'>Наши работы</a></li>
                 <li class="d-none d-md-inline-block"><a href='contacts.html'>Контакты</a></li>
             </ul>
-        </div>
+    </div>
     </div>
 </nav>
 <div class="modal fade custom-modal" id="measurer" tabindex="-1" role="dialog" aria-hidden="true">
@@ -498,7 +498,7 @@
                     <a href="tel:380686648825">+38 (068) 664-88-25</a>
                     <a href="tel:380509615800">+38 (050) 961-58-00</a>
                 </div>
-                <div class="footer-timetable mb-30">
+                <div class="footer-timetable mb-30 d-none d-lg-inline">
                     Пн - Пт: с 9:00 до 17:00,<br>
                     Сб: с 9:00 до 13:00
                 </div>
