--- a/rulon-shtory_vid.html
+++ b/rulon-shtory_vid.html
@@ -309,16 +309,12 @@
     <!-- CONTENT -->
     <section class="mb-5">
         <div class="container">
-
-            <h1 class="page-title h1">Рулонные шторы</h1>
+            <h1 class="page-title h1">Вид рулонных штор</h1>
 
             <div class="row">
                 <div class="col-md-4">
                     <!-- CATALOG SIDEBAR  -->
                     <div class="sidebar-catalog-list">
-                        <div class="sidebar-title" data-toggle="collapse" data-target="#sidebar-catalog-content">Фильтр
-                            <span class="qty-filters">1</span>
-                        </div>
 
                         <ul id="sidebar-catalog-content" class="sidebar-catalog-content collapse out">
                             <li>
@@ -419,109 +415,171 @@
 
                 </div>
                 <div class="col-md-8">
-                    <div class="row mb-4 mb-md-4 mb-lg-5">
-                        <div class="col-md-6">
-                            <div class="сatalog-grid style-2 mb-20"
-                                 style="background-image:url('./images/catalog/rulonnye_shtory1.png')">
-                                <div class="caption">
-                                    <div>
-                                        <div class="description">
-                                            Закрытые системы<br>
-                                            от 530 грн.
+                    <div class="content fw-400">
+                        <div class="image-container ">
+                            <img src="./images/catalog/about-us-hero-big.png" alt="">
+                        </div>
+                        <h2 class="fs-20 text-center mt-5 mb-23 fw-400">Описание</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet.
+                            Proin
+                            gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar
+                            tempor.
+                            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam
+                            fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien
+                            nunc
+                            eget odio. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum
+                            laoreet.</p>
+                        <p>Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar
+                            tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus
+                            mus.
+                            Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien
+                            nunc eget odio.</p>
+
+                        <h2 class="fs-20 text-center mt-3 mb-23 fw-400">Преимущества</h2>
+                        <ul class="content-list">
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum
+                                laoreet.
+                                Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. <br><br>
+                            </li>
+                            <li>Proin sodales pulvinar tempor.<br><br></li>
+                            <li>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                                Nam
+                                fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien
+                                nunc
+                                eget odio.<br><br>
+                            </li>
+                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum
+                                laoreet.
+                                Proin sodales pulvinar tempor.
+                            </li>
+                        </ul>
+
+                        <h2 class="fs-20 text-center mt-2 mb-23 fw-400">Палитра</h2>
+
+                        <div class="row palette mb-40">
+                            <div class="col-12 col-md-6 mb-20">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="col-6">
+                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
                                         </div>
-                                        <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="col-6">
+                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 mb-20">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="col-6">
+                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="col-6">
+                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 mb-20">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="col-6">
+                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="сatalog-grid style-2 mb-20"
-                                 style="background-image:url('./images/catalog/rulonnye_shtory1.png')">
-                                <div class="caption">
-                                    <div>
-                                        <div class="description">
-                                            Открытые системы<br>
-                                            от 280 грн.
-                                        </div>
-                                        <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
-                                        </div>
-                                    </div>
+
+                        <div class="price-container text-center pt-3 mb-5">
+                            <div class="price mb-4">Цена: от 2400 грн.</div>
+                            <div class="wrap-mid-button">
+                                <a href="#" class="mid-button">Сделать рассчет</a>
+                            </div>
+                        </div>
+
+                        <h2 class="fs-20 text-center pt-5 mb-40 fw-400">Наши работы</h2>
+
+                        <div class="works mb-3">
+                            <div class="row">
+                                <div class="col-md-6 mb-24 text-center">
+                                    <a data-fancybox="gallery" href="images/portfolio.png">
+                                        <img src="images/portfolio.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-md-6 mb-24 text-center">
+                                    <a data-fancybox="gallery" href="images/portfolio.png">
+                                        <img src="images/portfolio.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-md-6 mb-5 text-center">
+                                    <a data-fancybox="gallery" href="images/portfolio.png">
+                                        <img src="images/portfolio.png" alt="">
+                                    </a>
+                                </div>
+                                <div class="col-md-6 mb-5 text-center">
+                                    <a data-fancybox="gallery" href="images/portfolio.png">
+                                        <img src="images/portfolio.png" alt="">
+                                    </a>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="сatalog-grid style-2 mb-20"
-                                 style="background-image:url('./images/catalog/rulonnye_shtory1.png')">
-                                <div class="caption">
-                                    <div>
-                                        <div class="description">
-                                            Рулонные шторы День-ночь, Зебра<br>
-                                            от 750 грн.
-                                        </div>
-                                        <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="сatalog-grid style-2 mb-20"
-                                 style="background-image:url('./images/catalog/rulonnye_shtory1.png')">
-                                <div class="caption">
-                                    <div>
-                                        <div class="description">
-                                            Система День-ночь, Зебра 3D<br>
-                                            от 2500 грн.
-                                        </div>
-                                        <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="сatalog-grid style-2 mb-20"
-                                 style="background-image:url('./images/catalog/rulonnye_shtory1.png')">
-                                <div class="caption">
-                                    <div>
-                                        <div class="description">
-                                            Каталог тканей<br>
-                                        </div>
-                                        <div class="link mt-4">
-                                            <a href="#">Подробнее >></a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+
+                        <div class="text-center">
+                            <a href="portfolio.html" class="more-link">Больше работ</a>
                         </div>
 
                     </div>
-
-                    <div class="content pt-lg-5">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum
-                            laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin
-                            sodales pulvinar tempor.
-                        </p>
-                        <p>
-                            Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
-                            Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus
-                            sapien nunc eget odio. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean
-                            euismod bibendum laoreet.</p>
-                        <p>
-                            Proin gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales
-                            pulvinar tempor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
-                            ridiculus mus. Nam fermentum, nulla luctus pharetra vulputate, felis tellus mollis orci,
-                            sed rhoncus sapien nunc eget odio.
-
-                        </p>
-                    </div>
-
 
                 </div>
             </div>
@@ -587,7 +645,8 @@
 </div>
 <!-- Scripts-->
 <!--JQuery-->
-<script type="text/javascript" src="plugins/jquery-3.3.1.min.js"></script> <script type="text/javascript" src="plugins/jquery.mask/jquery.mask.min.js"></script>
+<script type="text/javascript" src="plugins/jquery-3.3.1.min.js"></script>
+<script type="text/javascript" src="plugins/jquery.mask/jquery.mask.min.js"></script>
 <script type="text/javascript" src="plugins/bootstrap/bootstrap.min.js"></script>
 <script type="text/javascript" src="plugins/slick/slick.js"></script>
 <script type="text/javascript" src="plugins/twbsPagination/jquery.twbsPagination.min.js"></script>
