--- a/rulon-shtory_vid.html
+++ b/rulon-shtory_vid.html
@@ -462,44 +462,12 @@
                                     <div class="col-6">
                                         <div class="row">
                                             <div class="col-6">
-                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                <a  class="fancybox" rel="pallete" href="images/680x451.jpg" title="Название или короткое описание фото">
                                                     <img src="images/palette.png" alt="">
                                                 </a>
                                             </div>
                                             <div class="col-6">
-                                                <a data-fancybox="gallery" href="images/pallete.png">
-                                                    <img src="images/palette.png" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-6">
-                                        <div class="row">
-                                            <div class="col-6">
-                                                <a data-fancybox="gallery" href="images/pallete.png">
-                                                    <img src="images/palette.png" alt="">
-                                                </a>
-                                            </div>
-                                            <div class="col-6">
-                                                <a data-fancybox="gallery" href="images/pallete.png">
-                                                    <img src="images/palette.png" alt="">
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12 col-md-6 mb-20">
-                                <div class="row">
-                                    <div class="col-6">
-                                        <div class="row">
-                                            <div class="col-6">
-                                                <a data-fancybox="gallery" href="images/pallete.png">
-                                                    <img src="images/palette.png" alt="">
-                                                </a>
-                                            </div>
-                                            <div class="col-6">
-                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                <a  class="fancybox" rel="pallete" href="images/680x451-2.jpg" title="Название или короткое описание фото">
                                                     <img src="images/palette.png" alt="">
                                                 </a>
                                             </div>
@@ -508,12 +476,12 @@
                                     <div class="col-6">
                                         <div class="row">
                                             <div class="col-6">
-                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                <a  class="fancybox" rel="pallete" href="images/680x451-3.jpg" title="Название или короткое описание фото">
                                                     <img src="images/palette.png" alt="">
                                                 </a>
                                             </div>
                                             <div class="col-6">
-                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                <a  class="fancybox" rel="pallete" href="images/680x451.jpg" title="Название или короткое описание фото">
                                                     <img src="images/palette.png" alt="">
                                                 </a>
                                             </div>
@@ -526,12 +494,44 @@
                                     <div class="col-6">
                                         <div class="row">
                                             <div class="col-6">
-                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                <a  class="fancybox" rel="pallete" href="images/680x451.jpg" title="Название или короткое описание фото">
                                                     <img src="images/palette.png" alt="">
                                                 </a>
                                             </div>
                                             <div class="col-6">
-                                                <a data-fancybox="gallery" href="images/pallete.png">
+                                                <a  class="fancybox" rel="pallete" href="images/680x451-2.jpg" title="Название или короткое описание фото">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-6">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <a  class="fancybox" rel="pallete" href="images/680x451-3.jpg" title="Название или короткое описание фото">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="col-6">
+                                                <a  class="fancybox" rel="pallete" href="images/680x451.jpg" title="Название или короткое описание фото">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-12 col-md-6 mb-20">
+                                <div class="row">
+                                    <div class="col-6">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <a  class="fancybox" rel="pallete" href="images/680x451.jpg" title="Название или короткое описание фото">
+                                                    <img src="images/palette.png" alt="">
+                                                </a>
+                                            </div>
+                                            <div class="col-6">
+                                                <a  class="fancybox" rel="pallete" href="images/680x451-2.jpg" title="Название или короткое описание фото">
                                                     <img src="images/palette.png" alt="">
                                                 </a>
                                             </div>
@@ -553,22 +553,22 @@
                         <div class="works mb-3">
                             <div class="row">
                                 <div class="col-md-6 mb-24 text-center">
-                                    <a data-fancybox="gallery" href="images/portfolio.png">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451.jpg" title="Название или короткое описание фото">
                                         <img src="images/portfolio.png" alt="">
                                     </a>
                                 </div>
                                 <div class="col-md-6 mb-24 text-center">
-                                    <a data-fancybox="gallery" href="images/portfolio.png">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451-2.jpg"  title="Название или короткое описание фото">
                                         <img src="images/portfolio.png" alt="">
                                     </a>
                                 </div>
                                 <div class="col-md-6 mb-5 text-center">
-                                    <a data-fancybox="gallery" href="images/portfolio.png">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451-3.jpg"  title="Название или короткое описание фото">
                                         <img src="images/portfolio.png" alt="">
                                     </a>
                                 </div>
                                 <div class="col-md-6 mb-5 text-center">
-                                    <a data-fancybox="gallery" href="images/portfolio.png">
+                                    <a class="fancybox" rel="portfolio" href="images/680x451.jpg"  title="Название или короткое описание фото">
                                         <img src="images/portfolio.png" alt="">
                                     </a>
                                 </div>
