--- a/index.html
+++ b/index.html
@@ -272,19 +272,20 @@
 <div class="modal fade custom-modal" id="measurer" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-content-title">Сделать рассчет</div>
-            <div class="modal-content-info">Укажите ваш номер телефона, и мы перезвоним вам, чтобы сделать расчет</div>
+            <div class="modal-content-title">Сделать расчет</div>
+            <div class="modal-content-info">Укажите ваш номер телефона, и мы<br> перезвоним вам, чтобы сделать расчет</div>
             <input type="text" class="phone-mask" placeholder="Ваш номер телефона">
             <button type="button" id="measurer-submit" class="button-measurer">Oк</button>
         </div>
     </div>
 </div>
-<div class="modal fade custom-modal" id="measurer-submit-dialog" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade custom-modal modal-mess" id="measurer-submit-dialog" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content p-5 ">
-            <div class="modal-content-info">Спасибо!<br>
-                Мы свяжемся с вами<br>
-                в ближайшее время.
+            <div class="modal-content-info">
+                    Спасибо!<br>
+                    Мы свяжемся с вами<br>
+                    в ближайшее время.
             </div>
             <button type="button" id="measurer-close" data-dismiss="modal" class="button-measurer mt-3">Oк</button>
         </div>
@@ -298,7 +299,7 @@
             <h3 class="main-layer-subtitle text-white">Проектируем. <br class="d-inline d-md-none"> Создаем. <br class="d-inline d-md-none"> Воплощаем</h3>
             <div class="row d-none d-md-block">
                 <div class="col-4">
-                    <div class="wrap-large-button">
+                    <div class="wrap-large-button wrap-large-button-top-banner">
                         <a href="#" class="large-button"  data-toggle="modal" data-target="#measurer">Вызвать замерщика</a>
                     </div>
                 </div>
@@ -314,7 +315,7 @@
         <div class="container">
             <div class="row mt-md-4 mb-2 grid-row">
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="gorizontal-zhaluzi.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/about-us-hero.png" alt="about-us-hero" class="сatalog-image">
                             <div class="caption">
@@ -324,18 +325,18 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="vertikal-zhaluzi.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/hero-slide-2-954e53c0.png" alt="hero-slide-2-954e53c0"
                                  class="сatalog-image">
                             <div class="caption">
-                                Горизонтальные жалюзи
+                                Вертикальные жалюзи
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="rulon-shtory.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/rulonnye_shtory1.png" alt="rulonnye_shtory1"
                                  class="сatalog-image">
@@ -346,7 +347,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="rim-shtory.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/Layer 14.png" alt="Layer 14" class="сatalog-image">
                             <div class="caption">
@@ -366,7 +367,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="plisse-shtory.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/blinds-stunning-accordion-blinds-window-shades-home-depot-vertical-accordion-blinds.png"
                                  alt="blinds-stunning-accordion-blinds-window-shades-home-depot-vertical-accordion-blinds"
@@ -378,7 +379,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="markizy.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/4067082.png" alt="4067082" class="сatalog-image">
                             <div class="caption">
@@ -388,7 +389,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="rollety.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/Layer 16.png" alt="Layer 16" class="сatalog-image">
                             <div class="caption">
@@ -398,7 +399,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="okna.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/great-floors-seattle-pin-by-cafe-racer-78-on-architecture-amp-design-of-great-floors-seattle.png"
                                  alt="great-floors-seattle-pin-by-cafe-racer-78-on-architecture-amp-design-of-great-floors-seattle"
@@ -465,9 +466,9 @@
                 <div class="slide"><img src="./images/partners/promtech.png" alt="promtech"></div>
             </div>
 
-            <div class="text mt-5">
+            <div class="text pt-75">
 
-                <p class="pt-3"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
+                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin
                     gravida dolor sit amet lacus accumsan et viverra justo commodo. Proin sodales pulvinar tempor. Cum
                     sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam fermentum,
                     nulla luctus pharetra vulputate, felis tellus mollis orci, sed rhoncus sapien nunc eget odio.
