--- a/about-company.html
+++ b/about-company.html
@@ -287,18 +287,18 @@
 <div class="modal fade custom-modal" id="measurer" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-content-title">Сделать рассчет</div>
-            <div class="modal-content-info">Укажите ваш номер телефона, и мы перезвоним вам, чтобы сделать расчет</div>
+            <div class="modal-content-title">Сделать расчет</div>
+            <div class="modal-content-info">Укажите ваш номер телефона, и мы<br> перезвоним вам, чтобы сделать расчет</div>
             <input type="text" class="phone-mask" placeholder="Ваш номер телефона">
             <button type="button" id="measurer-submit" class="button-measurer">Oк</button>
         </div>
     </div>
 </div>
-<div class="modal fade custom-modal" id="measurer-submit-dialog" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade custom-modal modal-mess" id="measurer-submit-dialog" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content p-5 ">
-
-            <div class="modal-content-info">Спасибо!<br>
+            <div class="modal-content-info">
+                Спасибо!<br>
                 Мы свяжемся с вами<br>
                 в ближайшее время.
             </div>
@@ -556,8 +556,8 @@
 <script type="text/javascript" src="plugins/JSResponsive/JS.Responsive.min.js"></script>
 
 <script type="text/javascript" src="plugins/viewer/viewer.min.js"></script>
-<link rel="stylesheet" href="plugins/fancybox/jquery.fancybox.min.css">
-<script type="text/javascript" src="plugins/fancybox/jquery.fancybox.min.js"></script>
+<link rel="stylesheet" href="plugins/fancybox-new/jquery.fancybox.min.css">
+<script type="text/javascript" src="plugins/fancybox-new/jquery.fancybox.min.js"></script>
 
 <script type="text/javascript" src="js/main.js"></script>
 </body>
