--- a/catalog.html
+++ b/catalog.html
@@ -286,18 +286,18 @@
 <div class="modal fade custom-modal" id="measurer" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
-            <div class="modal-content-title">Сделать рассчет</div>
-            <div class="modal-content-info">Укажите ваш номер телефона, и мы перезвоним вам, чтобы сделать расчет</div>
+            <div class="modal-content-title">Сделать расчет</div>
+            <div class="modal-content-info">Укажите ваш номер телефона, и мы<br> перезвоним вам, чтобы сделать расчет</div>
             <input type="text" class="phone-mask" placeholder="Ваш номер телефона">
             <button type="button" id="measurer-submit" class="button-measurer">Oк</button>
         </div>
     </div>
 </div>
-<div class="modal fade custom-modal" id="measurer-submit-dialog" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="modal fade custom-modal modal-mess" id="measurer-submit-dialog" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content p-5 ">
-
-            <div class="modal-content-info">Спасибо!<br>
+            <div class="modal-content-info">
+                Спасибо!<br>
                 Мы свяжемся с вами<br>
                 в ближайшее время.
             </div>
@@ -312,7 +312,7 @@
             <h1 class="text-center catalog-title" >Каталог продукции</h1>
             <div class="row mt-4 mb-5 grid-row">
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="gorizontal-zhaluzi.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/about-us-hero.png" alt="about-us-hero" class="сatalog-image">
                             <div class="caption">
@@ -322,7 +322,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="vertikal-zhaluzi.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/hero-slide-2-954e53c0.png" alt="hero-slide-2-954e53c0"
                                  class="сatalog-image">
@@ -333,7 +333,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="rulon-shtory.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/rulonnye_shtory1.png" alt="rulonnye_shtory1"
                                  class="сatalog-image">
@@ -344,7 +344,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="rim-shtory.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/Layer 14.png" alt="Layer 14" class="сatalog-image">
                             <div class="caption">
@@ -364,7 +364,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="plisse-shtory.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/blinds-stunning-accordion-blinds-window-shades-home-depot-vertical-accordion-blinds.png"
                                  alt="blinds-stunning-accordion-blinds-window-shades-home-depot-vertical-accordion-blinds"
@@ -376,7 +376,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="markizy.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/4067082.png" alt="4067082" class="сatalog-image">
                             <div class="caption">
@@ -386,7 +386,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="rollety.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/Layer 16.png" alt="Layer 16" class="сatalog-image">
                             <div class="caption">
@@ -396,7 +396,7 @@
                     </a>
                 </div>
                 <div class="col-md-4 grid-item">
-                    <a href="#">
+                    <a href="okna.html">
                         <div class="сatalog-grid style-1">
                             <img src="./images/catalog/great-floors-seattle-pin-by-cafe-racer-78-on-architecture-amp-design-of-great-floors-seattle.png"
                                  alt="great-floors-seattle-pin-by-cafe-racer-78-on-architecture-amp-design-of-great-floors-seattle"
